--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,7 @@ body {
 
 .social-link img {
 	width: 20px;
+	height: 20px;
 }
 
 #about {
@@ -68,9 +69,10 @@ body {
 }
 
 .picture img {
-	width: 100%;
-
+	max-width: 100%;
+	height: auto;
 }
+
 #about-me {
 	flex: 2
 }
@@ -242,6 +244,16 @@ form textarea {
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em;
+}
+
+.rights {
+	display: flex;
+  	justify-content: center;
+	padding: 15px;
+}
+
+.footer-text {
+	margin: 0;
 }
 
 @media all and (max-width: 1180px) {
