--- a/assets/style.css
+++ b/assets/style.css
@@ -149,6 +149,7 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
+	font-size: 2rem;
 
 }
 .quote__author {
@@ -254,6 +255,10 @@ input[type="submit"] {
 
 .footer-text {
 	margin: 0;
+}
+
+.carousel {
+	aspect-ratio: auto 80 / 37;
 }
 
 @media all and (max-width: 1180px) {
@@ -363,6 +368,9 @@ input[type="submit"] {
 	}
 	.picture {
 		width: 80%;
+	}
+	.quote__text {
+		font-size: 1.5rem;
 	}
 }
 
